# expense-tracker

./: .flake8  .gitignore  LICENSE  Makefile  README.md  expense_tracker.sh  pyproject.toml  pyvenv.cfg
.github/workflows/: generate-report.yml  python-lint.yml  python-test.yml
data/: 1970-01-contributions.csv  1970-01.csv
expense_tracker/: cli.py  generate_report.py
reports/: 1970-01-report.md  README.md  overview.md
tests/: test_generate_report.py
