[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "0.0.1"
description = "A Github based expense tracker."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Julian von Mendel", email = "prog@derjulian.net" }
]
keywords = ["expenses", "tracking", "github"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.0",
    "matplotlib>=3.0",
    "seaborn>=0.11"
]
requires-python = ">=3.12,<3.14"


[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pytest-mock",
    "poetry",
    "black",
    "mypy"
]

[tool.flake8]
max-line-length = 100
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "build",
    "dist"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages]
find = { include = ["expense-tracker"] }
[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
black = "^25.1.0"
mypy = "^1.15.0"
pytest-asyncio = "^0.26.0"
trio = "^0.30.0"
testpath = "^0.6.0"
jaraco-path = "^3.7.2"
pyinstaller = "^6.13.0"
ini2toml = "^0.15"